# safetyweb

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.legacy.yml  docker-compose.yml  pyproject.toml  up.ps1  zapretvless.sln
LICENSES/: README.md
alembic/: env.py  script.py.mako
alembic/versions/: 20260613_0001_initial.py  20260613_0002_subscription_notifications.py  20260618_0003_customer_benefits.py  20260618_0004_referrals.py  20260618_0005_subscription_notifications_period.py  20260618_0006_referral_rewards_applied_at.py  20260618_0007_add_user_trial_fields.py  20260618_0008_add_platega_payment_fields.py  20260618_0008_payment_webhook_events.py  20260618_0009_add_payment_webhook_events.py  20260619_0010_add_webhook_retry_fields.py  20260619_0011_add_unique_active_subscription_per_user.py  20260619_0011_normalize_webhook_retry_fields.py  20260619_0012_add_subscription_node_fields.py  20260619_0012_add_subscription_node_key.py  20260619_0013_update_payment_provider_payment_unique_index.py  (+5 more)
app/: __init__.py  bot_commands.py  config.py  http_app.py  main.py
app/db/: models.py  session.py
docs/: architecture.md  modes.md  roadmap.md  startup.md
scripts/: check_alembic_graph.py  dev-check.ps1  dev-up.ps1  install-service.ps1  repair-network.ps1  uninstall-service.ps1
tests/: test_alembic_graph.py  test_benefit_service.py  test_bot_command_menu.py  test_config.py  test_http_app.py  test_main_check_payment.py  test_node_selector_service.py  test_payment_finalization_service.py  test_payment_retries.py  test_payment_service.py  test_platega_client.py  test_platega_webhook_service.py  test_sanitize.py  test_scheduler.py  test_user_repository.py  test_vpn_service.py  test_xui_client.py  test_xui_health_service.py
(+35 files in other folders)
