[project]
name = "safetyweb"
version = "0.1.0"
description = "Telegram bot for VPN subscriptions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram",
    "aiogram-dialog",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "redis",
    "httpx",
    "pydantic-settings",
    "apscheduler",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
