[project]
name = "safetyweb"
version = "0.1.0"
description = "Telegram bot for protected network access subscriptions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.29,<4",
    "aiogram-dialog>=2.6,<3",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "redis",
    "httpx>=0.28,<0.29",
    "fastapi>=0.137,<0.138",
    "uvicorn>=0.49,<0.50",
    "pydantic-settings",
    "python-dateutil",
    "APScheduler>=3.11,<4",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
